# lox-interpreter-cpp

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.sh
.github/workflows/: ci.yml
docs/lox-syntax/: lox.bnf  lox.md
docs/workflow/: iter1-scanner-parser.md  iter1-scanner.md  iter2-parser.md  iter3-syntax-errors.md
include/color/: color.hpp  colormod.hpp
include/lox/: ASTHeight.hpp  AstPrinter.hpp  Expr.hpp  ExprType.hpp  ExprVisitor.hpp  Literal.hpp  LiteralType.hpp  Lox.hpp  Parser.hpp  Scanner.hpp  Token.hpp  TokenType.hpp
include/lox/utils/: ExprTreeHeight.hpp  ExprTreePrinter.hpp  ExprTreeSize.hpp
notes/: prereqs.md
src/: ASTHeight.cpp  Expr.cpp  Expr.tpp  Lox.cpp  Parser.cpp  Scanner.cpp  Token.cpp  main.cpp
src/utils/: ExprTreeHeight.cpp  ExprTreeSize.cpp
test/: AlwaysTrue.cpp  ExprParser_test.cpp  Lox_test.cpp  Parser.test.cpp  Parser_test.cpp  Scanner_test.cpp  intentionallyBrokenTest.cpp  main.test.cpp  tests_main.cpp
test/loxcode/: test1.lox  test2.lox
test/testutils/: utils.hpp
